<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Number Crunch</string>
    <string name="action_skip">Skip</string>

    <string name="title_play">Play</string>
    <string name="title_high_score">High Scores</string>
    <string name="title_about">About</string>

    <string name="about_description">A game based on mathematical functions. Mix generated numbers and mathematical operations to equal the target number displayed.</string>
    <string name="about_created_by_title">Created by</string>
    <string name="about_created_by">Nick Piscopio</string>
    <string name="copyright">&#169; 2015. All Rights Reserved. Number Crunch</string>

    <string name="title_score">Score</string>
    <string name="title_time">Time</string>
    
    <string name="target">Target</string>
    <string name="peek">Slide to peek ></string>

    <string name="title_answer_correct">Correct!</string>
    <string name="title_answer_incorrect">Incorrect</string>
    <string name="description_answer_correct">Next in %1$d...</string>

</resources>
