<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margins"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginBottom="@dimen/about_description_margin"
            android:src="@drawable/number_crunch"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/title"
            android:layout_marginTop="@dimen/about_description_margin"
            style="@style/text_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_description"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_normal"
            android:layout_marginTop="@dimen/about_description_margin"
            style="@style/text_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_created_by_title"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_normal"
            android:layout_marginTop="@dimen/margins"
            style="@style/text_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_created_by"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_large"
            style="@style/text_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_small"
            android:layout_marginTop="@dimen/margins"
            style="@style/text_normal"/>

    </LinearLayout>

</ScrollView>