<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margins"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginBottom="@dimen/about_description_margin"
        android:src="@drawable/number_crunch"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/title"
        android:layout_marginTop="@dimen/about_description_margin"
        android:layout_marginBottom="@dimen/about_description_margin"
        style="@style/text_bold"/>

    <Button
        android:id="@+id/button_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_play"
        android:background="@drawable/button_primary"
        android:textColor="@color/fourth"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/button_high_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_high_score"
        android:background="@drawable/button_secondary"
        android:layout_marginTop="@dimen/margins"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
